# llvm-sol

./: CMakeLists.txt  DataStruct.h  README.md  SolcMain.cpp  SolcMain.h  check.json
Builder/: SolcLLVM.cpp  SolcLLVM.h  TypeRef.cpp  TypeRef.h
Json/: SolcJsonOperator.cpp  SolcJsonOperator.h
